syntax = "proto3";
package ServicePackage;

option go_package = "github.com/ghosthookcc/HomeAutomatonKit/app/ServiceManager/proto-stubs/impl/go/common";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Service 
{
    rpc Ping (google.protobuf.Empty) returns (BaseHeartbeat);
    rpc Connect (BaseHeartbeat) returns (BaseState);
    rpc Disconnect (BaseHeartbeat) returns (BaseState);
    rpc PropagateCachedLogs (BaseHeartbeat) returns (google.protobuf.Empty);
}

enum ConnectionState 
{
    ALIVE = 0;
    DEAD = 1;
    CONNECTING = 2;
    DISCONNECTING = 3;
    RECONNECTING = 4;
    ERROR = 5;
}

message BaseState
{
    BaseHeartbeat heartbeat = 1;
    ConnectionState state = 2;
}

message BaseHeartbeat
{
    int32 id = 1;
    google.protobuf.Timestamp lastUpdated = 2;
}